--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,8 @@ services:
     container_name: mongo-daodao
     volumes:
       - ./data/mongo:/data/
-      - ./backup/2025-02-17:/backup
+      - ./backup/2025-01-30:/backup/2025-01-30
+      - ./backup/2025-02-17:/backup/2025-02-17
     ports:
       - "27017:27017"
 
